--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Eda Cansu</h1>
 <h2>Hakkımda</h2>
 <!-- Hakkımda kısa bir paragraf başlangıcı-->
-<p>Merhaba, ben Eda. Istanbul'da yaşıyorum. Öğreciyim. Kitap okumak ve dizi izlemekten müthiş keyif alıyorum. Ayrıca Ted konuşmalarını da takip etmekten hoşşlanıyorum. </p>
+<p>Merhaba, ben Eda. Istanbul'da yaşıyorum. Öğreciyim. Kitap okumak ve dizi izlemekten müthiş keyif alıyorum. Ayrıca Ted konuşmalarını takip etmekten de hoşlanıyorum. </p>
 <!-- Hakkımda kısa bir paragraf sonu-->
