--- a/index.html
+++ b/index.html
@@ -3,3 +3,14 @@
 <!-- Hakkımda kısa bir paragraf başlangıcı-->
 <p>Merhaba, ben Eda. Istanbul'da yaşıyorum. Öğreciyim. Kitap okumak ve dizi izlemekten müthiş keyif alıyorum. Ayrıca Ted konuşmalarını takip etmekten de hoşlanıyorum. </p>
 <!-- Hakkımda kısa bir paragraf sonu-->
+
+<!--Örnekler-->
+<h3>Sevdiğim Diziler</h3>
+<ul>The Spy</ul>
+<ul>Sherlock Holmes Series</ul> 
+<ul>The Handmaid's Tale</ul>
+<h3>Sevdiğim Filmler</h3>
+<ul>The Lord of The Rings</ul>
+<ul>Beautiful Mind</ul>
+<ul>Enigma</ul>
+<!--Örnekler Son-->
