Favori Kitap Eklendi

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <!-- Hakkımda kısa bir paragraf başlangıcı-->
     <p>
         Merhaba, ben <strong>Eda</strong>. 
-        <br>
+        <br> 
         Istanbul'da yaşıyorum. 
         <br>
         Öğreciyim. <em>dizi, film izlemek</em> ve <em>kitap okumaktan</em> müthiş keyif alıyorum.
         <br>
         Ayrıca <em>Ted konuşmalarını</em> takip etmekten de hoşlanıyorum. 
+        <br>
+        <a href="#footer">Favori kitabım için lütfen tıklayın.</a> 
     </p>
     <!-- Hakkımda kısa bir paragraf sonu-->
 
@@ -29,14 +31,14 @@
     </span>
 
             <ul>
-            <li>The Spy</li>
-            <li>Sherlock</li> 
-            <li>The Handmaid's Tale</li>
+                <li>The Spy</li>
+                <li>Sherlock</li> 
+                <li>The Handmaid's Tale</li>
             </ul>
 
             <!--Dizi Görselleri Başlangıcı-->
             <a href="https://www.imdb.com/title/tt5952634/" target="_blank">
-                <img src="images/Spy1-600x337.jpg" alt="The Spy" width="150" height="85">
+                <img src="img/Spy1-600x337.jpg" alt="The Spy" width="150" height="85">
             </a>
             
             <a href="https://www.imdb.com/title/tt1475582/" target="_blank">
@@ -52,13 +54,13 @@
         <h3>Sevdiğim Filmler</h3>
     </span>
             <ul>
-            <li>The Lord of The Rings: The Fellowship of the Ring</li>
-            <li>Beautiful Mind</li>
-            <li>The Imitation Game</li>
+                <li>The Lord of The Rings: The Fellowship of the Ring</li>
+                <li>Beautiful Mind</li>
+                <li>The Imitation Game</li>
             </ul>
             <!--Film Görselleri Başlangıcı-->
             <a href="https://www.imdb.com/title/tt0120737/" target="_blank">
-                <img src="images/LOTR.jpg" alt="The Lord of The Rings" width="150" height="85">
+                <img src="img/LOTR.jpg" alt="The Lord of The Rings" width="150" height="85">
             </a>
 
             <a href="https://www.imdb.com/title/tt0268978/?ref_=nv_sr_srsg_0" target="_blank">
@@ -66,7 +68,7 @@
             </a>
 
             <a href="https://www.imdb.com/title/tt2084970/?ref_=fn_al_tt_1" target="_blank">
-                <img src="images/imitation.jpg" alt="The Imitation Game" width="150" height="85">
+                <img src="img/imitation.jpg" alt="The Imitation Game" width="150" height="85">
             </a>
             <!--Film Görselleri Sonu-->
 
@@ -84,14 +86,35 @@
             </a>
 
             <a href="https://www.goodreads.com/book/show/57028396-kad-nlar-adas?ref=nav_sb_ss_1_14" target="_blank">
-                <img src="images/Kadınlar Adası.jpg" alt="Kadınlar Adası" width="125">
+                <img src="img/Kadınlar Adası.jpg" alt="Kadınlar Adası" width="125">
             </a>
 
             <a href="https://www.goodreads.com/book/show/8157140-l-canlar?ref=nav_sb_ss_1_8" target="_blank">
                 <img src="https://productimages.hepsiburada.net/s/37/375/10561701118002.jpg" alt="Ölü Canlar" width="125">
             </a>
         <!--Örnekler Son-->
+        <!--Favori Kitap Başlangıç-->
+        <span style="color: chocolate;">
+            <h3>Favori Kitap</h3>
+        </span>
+        <ul>
+            <li id="footer">Vedat Türkali - Mavi Karanlık</li>
+        </ul>
 
+        <a href="https://www.goodreads.com/book/show/7815434-mavi-karanl-k" target="_blank">
+            <img src="https://productimages.hepsiburada.net/s/7/500/9096234041394.jpg" alt="Mavi Karanlık" width="125">
+        </a>
+
+        <p>
+            <strong>Kitap Hakkında:</strong>
+            <br>
+            <em>
+                Zaman:  12 Eylül 1980 Darbesi öncesinin minyatür, kaotik "iç savaş" yılları. 
+                <br>
+                Olayların eksenini, doktora öğrencisi Nergis'in ölümle tehdit edilen sevgilisi, fizik asistanı Korhan'ı ölümden kurtarmak için Bodrum'a getirilişi, orada eski sevgilisi Özgür'le karşılaşması oluşturuyor.
+            </em>
+        </p>
+        <!--Favori Kitap Son-->
     </body>
 </html>
 
